2008-09-23  Paolo Carlini  <paolo.carlini@oracle.com>

	Implement DR 396 [Ready].
	* include/std/bitset (bitset<>::bitset(const std::basic_string<>&,
	size_t, size_t, _CharT, _CharT), bitset<>::bitset(const char*,
	char, char), bitset<>::to_string(_CharT, _CharT),
	bitset<>::_M_copy_from_string(const std::basic_string<>&, size_t,
	size_t, _CharT, _CharT), bitset<>::_M_copy_to_string
	(std::basic_string<>&, _CharT, _CharT), bitset<>::_M_copy_from_ptr(
	const _CharT*, size_t, size_t, size_t, _CharT, _CharT)): Add.
	(operator>>(std::basic_istream<>&, bitset<_Nb>&), operator<<(
	std::basic_ostream<>&, const bitset<_Nb>&)): Adjust.
	* include/debug/bitset (bitset<>::bitset(const std::basic_string<>&,
	size_t, size_t, _CharT, _CharT), bitset<>::bitset(const char*,
	char, char), bitset<>::to_string(_CharT, _CharT)): Add.
	* doc/xml/manual/intro.xml: Add an entry for DR 396.
	* testsuite/23_containers/bitset/cons/dr396.cc: Add.
	* testsuite/23_containers/bitset/to_string/dr396.cc: Likewise.

2008-09-23  Chris Fairles <cfairles@gcc.gnu.org>

	* testsuite/25_algorithms/min/37547.cc: Return void to avoid warnings.
	* testsuite/25_algorithms/max/37547.cc: Likewise.
	* testsuite/25_algorithms/minmax/37547.cc: Likewise.

2008-09-23  Chris Fairles <cfairles@gcc.gnu.org>

	* include/std/chrono: If _GLIBCXX_USE_MONOTONIC_CLOCK is defined, don't
	typedef monotonic_clock to system_clock and instead declare new class.
	* src/chrono.cc: Conditionally define monotonic_clock::now().
	* include/std/condition_variable (wait_until): Throw exception if
	__gthread_cond_timedwait returns with error other than timed_out. Use
	system_clock as known clock type (__clock_t) and add overloads for known
	and unknown clocks. In the unknown case, sync to the known clock.
	Implement overload taking a predicate.
	(wait_for): Implement overload taking a predicate.
	* config/abi/pre/gnu.ver: Add exports for monotonic_clock.
	* testsuite/30_threads/condition_variable_any/cons/assign_neg.cc: Modify